--- a/mods.html
+++ b/mods.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div class="mods" id="mods">placeholder</div>
-    <script src="../json.js"></script>
+    <script src="json.js"></script>
 </body>
 </html>
